--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificação de Conexão</title>
-    <link rel="stylesheet" href="styles_funn.css"> <!-- Link para seu arquivo CSS -->
+    <link rel="stylesheet" href="styles_funns.css"> <!-- Link para seu arquivo CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
