--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </h1>
 </body>
 </html>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9113988724746688"
+     crossorigin="anonymous"></script>
 <!DOCTYPE html>
 <html lang="pt">
 <head>
