--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <link rel="stylesheet" href="styles/style.css"/>
   <title>Isaac Tech</title>
 </head>
+  <!-- Anúncio AdSense -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-9113988724746688"
+    data-ad-slot="1234567890"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <body>
   <h1>
     
